--- a/3/bookmarks/templates/main/tags.html
+++ b/3/bookmarks/templates/main/tags.html
@@ -17,25 +17,20 @@
             <div id="main">
                 <div id="sidebar">
                     <ul>
-                        <li class="active" id="home">
-                            <a href="#">My Links</a>
+                        <li id="home">
+                            <a href="../">My Links</a>
+                        </li>
+                        <li><a href="javascript:;" id="addLink">Add a link</a></li>
+                        <li class="active" ><a href="#">Tags</a></li>
                             {% if tag_name %}
                                 {{ tag_name }}
                             {% endif %}
-                        </li>
-                        <li><a href="javascript:;" id="addLink">Add a link</a></li>
-                        <li><a href="#">Tags</a></li>
                     </ul>
                 </div><!--
                 --><div id="content">
-                    {% for link in links %}
+                    {% for tag in tags.all %}
                         <div class="link">
-                            <h4><a href="{{ link.url }}">{{ link.title }}</a></h4>
-                            <p class="tags">
-                                {% for tag in link.tags.all %}
-                                    <a href="/bookmarks/tags/{{ tag.name }}/">{{ tag.name }}</a>
-                                {% endfor %}
-                            </p>
+                            <h4><a href="/bookmarks/tags/{{ tag.name }}/">{{ tag.name }}</a></h4>
                         </div>
                     {% endfor %}
                 </div>
